fix index page header and footer, add text decoration to headings and paragraphs

--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="w3-container w3-padding-32 w3-center w3-light-grey">
+<footer class="w3-container w3-padding-32 w3-center footer">
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 s12">
       <img src="/assets/img/logo.png" alt="CWP LOGO" style="width: 125px;">
