--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -4,6 +4,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://www.w3schools.com/w3css/5/w3.css');
 @import url('https://fonts.googleapis.com/css2?family=Segoe+UI:wght@300;400;500;600;700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/theme-toggles@4.10.1/css/within.min.css');
 /* ============================================================================
    THEME VARIABLES
 ============================================================================ */
