Revert "still broken"
This reverts commit 239dae947025155cbb24b660da8208a8a91b0639.

--- a/docs/assets/css/w3.css
+++ b/docs/assets/css/w3.css
@@ -1,3 +1,4 @@
+/* W3.CSS 5.02 March 31 2025 by Jan Egil and Borge Refsnes */
 html {
     box-sizing: border-box
 }
@@ -8,6 +9,7 @@ html {
     box-sizing: inherit
 }
 
+/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
 html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
