--- a/docs/partials/nav.html
+++ b/docs/partials/nav.html
@@ -2,40 +2,40 @@
 <header class="cw-top">
   <div class="cw-bar cw-card" id="myNavbar">
     <!-- Brand -->
-    <a href="/" class="cw-bar-item cw-btn">
+    <a href="/" class="cw-bar-item cw-button">
       <img src="/assets/img/logo.png" alt="CWP Logo" style="height:40px;width:40px;">
       <span class="logo-title">ClockworkProduction</span>
     </a>
 
     <!-- Desktop links -->
     <div class="cw-bar-item cw-right cw-hide-small">
-      <a href="/pages/about_us.html" class="cw-bar-item cw-btn">ABOUT US</a>
+      <a href="/pages/about_us.html" class="cw-bar-item cw-button">ABOUT US</a>
 
       <div class="cw-dropdown-hover">
-        <button class="cw-btn">OUR WORK ▾</button>
+        <button class="cw-button">OUR WORK ▾</button>
         <div class="cw-dropdown-content cw-bar-block cw-card-4">
-          <a href="/pages/pixelpulse.html" class="cw-bar-item cw-btn">PIXELPULSE</a>
-          <a href="/pages/frameforge.html" class="cw-bar-item cw-btn">FRAMEFORGE</a>
-          <a href="/pages/cwp_studio.html" class="cw-bar-item cw-btn">CWP STUDIO</a>
+          <a href="/pages/pixelpulse.html" class="cw-bar-item cw-button">PIXELPULSE</a>
+          <a href="/pages/frameforge.html" class="cw-bar-item cw-button">FRAMEFORGE</a>
+          <a href="/pages/cwp_studio.html" class="cw-bar-item cw-button">CWP STUDIO</a>
         </div>
       </div>
 
-      <a href="/pages/meet_the_crew.html" class="cw-bar-item cw-btn">TEAM :3</a>
-      <a href="/pages/contact.html" class="cw-bar-item cw-btn">CONTACT</a>
-      <a href="/pages/community.html" class="cw-bar-item cw-btn">COMMUNITY</a>
+      <a href="/pages/meet_the_crew.html" class="cw-bar-item cw-button">TEAM :3</a>
+      <a href="/pages/contact.html" class="cw-bar-item cw-button">CONTACT</a>
+      <a href="/pages/community.html" class="cw-bar-item cw-button">COMMUNITY</a>
 
       <!-- Theme toggle switch -->
-      <label class="theme-switch">
-        <input type="checkbox" class="theme-toggle-checkbox" data-cw-theme-toggle>
-        <span class="slider round">
+      <label class="theme-switch" for="theme-checkbox-desktop">
+        <input type="checkbox" class="theme-toggle-checkbox" id="theme-checkbox-desktop">
+        <div class="slider round">
           <i class="fa-solid fa-gears gear-icon"></i>
           <i class="fa-solid fa-wand-sparkles crystal-ball-icon"></i>
-        </span>
+        </div>
       </label>
     </div>
 
     <!-- Mobile Hamburger -->
-    <a href="javascript:void(0)" class="cw-bar-item cw-btn cw-right cw-hide-large cw-hide-medium" onclick="w3_open()">
+    <a href="javascript:void(0)" class="cw-bar-item cw-button cw-right cw-hide-large cw-hide-medium" onclick="w3_open()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
@@ -43,30 +43,30 @@
 
 <!-- Sidebar (mobile) -->
 <nav class="cw-sidebar cw-bar-block cw-card cw-animate-left cw-hide-large cw-hide-medium" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="cw-bar-item cw-btn cw-large">Close ×</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="cw-bar-item cw-button cw-large">Close ×</a>
 
   <!-- Theme toggle inside sidebar -->
-  <label class="theme-switch">
-    <input type="checkbox" class="theme-toggle-checkbox" data-cw-theme-toggle>
-    <span class="slider round">
+  <label class="theme-switch" for="theme-checkbox-mobile">
+    <input type="checkbox" class="theme-toggle-checkbox" id="theme-checkbox-mobile">
+    <div class="slider round">
       <i class="fa-solid fa-gears gear-icon"></i>
       <i class="fa-solid fa-wand-sparkles crystal-ball-icon"></i>
-    </span>
+    </div>
   </label>
 
-  <a href="/index.html" onclick="w3_close()" class="cw-bar-item cw-btn">HOME</a>
-  <a href="/pages/about_us.html" onclick="w3_close()" class="cw-bar-item cw-btn">ABOUT US</a>
+  <a href="/index.html" onclick="w3_close()" class="cw-bar-item cw-button">HOME</a>
+  <a href="/pages/about_us.html" onclick="w3_close()" class="cw-bar-item cw-button">ABOUT US</a>
 
   <div class="cw-dropdown-hover">
-    <button class="cw-btn">OUR WORK ▾</button>
+    <button class="cw-button">OUR WORK ▾</button>
     <div class="cw-dropdown-content cw-bar-block cw-card-4">
-      <a href="/pages/pixelpulse.html" class="cw-bar-item cw-btn">PIXELPULSE</a>
-      <a href="/pages/frameforge.html" class="cw-bar-item cw-btn">FRAMEFORGE</a>
-      <a href="/pages/cwp_studio.html" class="cw-bar-item cw-btn">CWP STUDIO</a>
+      <a href="/pages/pixelpulse.html" class="cw-bar-item cw-button">PIXELPULSE</a>
+      <a href="/pages/frameforge.html" class="cw-bar-item cw-button">FRAMEFORGE</a>
+      <a href="/pages/cwp_studio.html" class="cw-bar-item cw-button">CWP STUDIO</a>
     </div>
   </div>
 
-  <a href="/pages/meet_the_crew.html" onclick="w3_close()" class="cw-bar-item cw-btn">TEAM :3</a>
-  <a href="/pages/community.html" onclick="w3_close()" class="cw-bar-item cw-btn">COMMUNITY</a>
-  <a href="/pages/contact.html" onclick="w3_close()" class="cw-bar-item cw-btn">CONTACT</a>
+  <a href="/pages/meet_the_crew.html" onclick="w3_close()" class="cw-bar-item cw-button">TEAM :3</a>
+  <a href="/pages/community.html" onclick="w3_close()" class="cw-bar-item cw-button">COMMUNITY</a>
+  <a href="/pages/contact.html" onclick="w3_close()" class="cw-bar-item cw-button">CONTACT</a>
 </nav>
